--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -4,10 +4,10 @@
     \begin{section}{Simplicial Complexes} 
         \subfile{sections/1/1}    
     \end{section}
-    \newpage
-    \begin{section}{Simplicial Homology}
-        \subfile{sections/1/2}    
-    \end{section}
+    % \newpage
+    % \begin{section}{Simplicial Homology}
+    %     \subfile{sections/1/2}    
+    % \end{section}
     % \newpage
     % \begin{section}{Simplicial Cohomology}
     %     \subfile{sections/1/3} 
